--- a/tshop/tapp/template/navbar.html
+++ b/tshop/tapp/template/navbar.html
@@ -31,11 +31,11 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'customer-order-status' %}">ORDER</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">LOGOUT</a>
                       </li>
                     {% else %}
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'customer-registration' %}">Registration</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'customer-registration' %}">REGISTRATION</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
